--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -2742,7 +2742,7 @@ _customEmojisManager:
     deleteSelectionRanges: "Delete rows in the selection"
     searchSettings: "Search settings"
     searchSettingCaption: "Set detailed search criteria."
-    searchLimit: ""
+    searchLimit: "Limit results"
     sortOrder: "Sort order"
     registrationLogs: "Registration log"
     registrationLogsCaption: "Logs will be displayed when updating or deleting Emojis. They will disappear after updating or deleting them, moving to a new page, or reloading."
@@ -2767,11 +2767,11 @@ _customEmojisManager:
       markAsDeleteTargetRanges: "Mark rows in the selection as a target to delete"
       alertUpdateEmojisNothingDescription: "There are no updated Emojis."
       alertDeleteEmojisNothingDescription: "There are no Emojis to be deleted."
-      confirmMovePage: ""
-      confirmChangeView: ""
+      confirmMovePage: "Do you want to move the page?"
+      confirmChangeView: "Do you want to change the view?"
       confirmUpdateEmojisDescription: "Update {count} Emoji(s). Are you sure to continue?"
       confirmDeleteEmojisDescription: "Delete checked {count} Emoji(s). Are you sure to continue?"
-      confirmResetDescription: ""
+      confirmResetDescription: "This will reset any changes you have made so far"
       confirmMovePageDesciption: "Changes have been made to the Emojis on this page.\nIf you leave the page without saving, all changes made on this page will be discarded."
       dialogSelectRoleTitle: "Search by roll set in Emojis"
     _register:
